--- a/Shoppingcart/src/assets/storestyles.css
+++ b/Shoppingcart/src/assets/storestyles.css
@@ -852,182 +852,8 @@ label {
     .cart-total > div > p {
         margin: auto;
     }
-
-
-    @media (max-width: 768px) {
-        body {
-            font-size: 14px;
-        }
-    
-        .header {
-            width: 100%;
-            padding: 9px 4%;
-            background: #112e42; /* Adjust background color if needed */
-        }
-    
-        .navbar {
-            justify-content: center;
-            text-align: center;
-        }
-    
-        .container {
-            margin-top: 20px;
-            margin-left: 10px;
-        }
-    
-        .container > input {
-            width: 80%; /* Adjust input width */
-        }
-    
-        .headerBG {
-            height: 700px;
-            display: flex;
-            flex-wrap: wrap;
-        }
-    
-        .topScroll {
-            position: relative;
-            background-image: none;
-            background-color: #00000095;
-            z-index: 1;
-            height: 200px;
-        }
-    
-        #PcTitle {
-            margin-top: 10%;
-            max-width: 90%;
-            font-size: 35px;
-        }
-    
-        .Container {
-            grid-auto-columns: 300px; /* Adjust grid columns */
-            gap: var(--size-5);
-        }
-    
-        .Container > div {
-            height: 250px; /* Adjust height */
-            width: 300px; /* Adjust width */
-        }
-    
-        .PcImg {
-            max-width: auto;
-            height: 65%; /* Adjust height */
-            margin: 10px; /* Adjust margin */
-        }
-    
-        .Container > div > h3 {
-            width: 120px;
-            font-size: 18px; /* Adjust font size */
-            margin-left: 0px;
-        }
-    
-        .Container > div > p {
-            margin-left: 0px;
-            font-size: 20px; /* Adjust font size */
-            width: 120px;
-        }
-    
-        .Container > div > button {
-            margin-left: 0%;
-            margin-bottom: 10%;
-            font-size: 16px; /* Adjust font size */
-        }
-    
-        .Container > div > button:hover {
-            background-color: #000000;
-        }
-    
-        .Container > div {
-            margin-left: 10px;
-            margin-top: 10px;
-        }
-    
-        #PartsTitle {
-            margin-top: 10%;
-            margin-bottom: 10%;
-            max-width: 90%;
-            font-size: 30px; /* Adjust font size */
-        }
-    
-        .Parts {
-            width: 120px;
-            background-repeat: no-repeat;
-            z-index: 1;
-            background-size: contain;
-            border-radius: 15px;
-            margin-bottom: 20px;
-            background-position: center;
-            justify-content: space-evenly;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            height: 250px; /* Adjust height */
-            padding: 10px;
-            order: 2;
-        }
-    
-        .PartsImg {
-            height: 10px;
-            margin-inline: auto;
-        }
-    
-        .Parts > h3 {
-            font-size: 16px; /* Adjust font size */
-            margin: 0px;
-            width: 90%;
-            align-self: center;
-        }
-    
-        .Parts > p {
-            margin: 0px;
-            margin-bottom: 10px;
-            font-size: 24px; /* Adjust font size */
-        }
-    
-        .Parts > button {
-            margin: 0px;
-            height: fit-content;
-            width: fit-content;
-            font-size: 16px; /* Adjust font size */
-            margin-bottom: 20px;
-        }
-    
-        .Parts > img {
-            width: auto;
-            height: 40px; /* Adjust height */
-            margin: 0px;
-            align-self: center;
-            margin-bottom: 15px;
-            margin-top: 20%;
-        }
-    
-        .cart {
-            justify-content: flex-start;
-            width: auto;
-            height: fit-content;
-            order: 1;
-            display: grid;
-            grid-auto-flow: column;
-            overscroll-behavior-inline: contain;
-            overflow-x: auto;
-        }
-    
-        .cart > button {
-            font-size: 16px; /* Adjust font size */
-            margin-bottom: 15px;
-            margin-right: 10px;
-        }
-    
-        .cart > button:hover {
-            background-color: #000000;
-        }
-    
-        .cartImg {
-            height: 50px; /* Adjust height */
-        }
-    }
 }
-@media (max-width: 1298px) {
+@media screen and (max-width: 9298px) {
     body {
         font-size: 14px;
     }
@@ -1198,3 +1024,4 @@ label {
         height: 60px;
     }
 }
+
