--- a/Shoppingcart/src/assets/storestyles.css
+++ b/Shoppingcart/src/assets/storestyles.css
@@ -629,14 +629,14 @@ label {
     display: none;
 }
 /* On screens that are 500px or less, set the background color to olive */
-@media screen and (max-width: 600px) {
 
-    
+@media screen and (max-width: 768px) {
     .quicklog {
         display: none;
     }
+
     .quicklogBottom {
-        display:contents;
+        display: contents;
         position: relative;
         display: flex;
         width: fit-content;
@@ -645,6 +645,7 @@ label {
         margin: auto;
         height: auto;
     }
+
     .container > h5 {
         font-family: 'Amatic SC';
         display: flex;
@@ -659,6 +660,7 @@ label {
         font-weight: 700;
         line-height: auto;
     }
+
     .container > h5 > a {
         font-family: 'Amatic SC';
         height: fit-content;
@@ -667,361 +669,110 @@ label {
         text-align: center;
         font-weight: 700;
     }
+
     .prompt {
         padding-top: 0px;
         font-size: 30px;
     }
+
     .quicklogBottom > a {
         text-align: center;
     }
+
     .prompt > b {
         font-size: 40px;
     }
+
     .container > input {
-        width: 80%;
-    }
-    .headerBG {
-        height: 700px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .topScroll {
-        position: relative;
-        background-image: none;
-        background-color: #00000095;
-        z-index: 1;
-      }
-    .h1 {
-        padding: 15px;
-        color: #1524f7;
-        text-shadow: 0 0 3px #DCC099, 0 0 5px #DCC099;
-        font-size: 60px;
-        font-family: 'Uncial Antiqua';
-        margin-top: 5%;
-        animation: fadeIn 9s;
-    }
-    @keyframes fadeIn {
-        0% { opacity: 0; }
-        33% { opacity: 0; }
-        100% { opacity: 1; }
-      }
-      
-    @-moz-keyframes fadeIn {
-        0% { opacity: 0; }
-        33% { opacity: 0; }
-        100% { opacity: 1; }
-    }
-    
-    @-webkit-keyframes fadeIn {
-        0% { opacity: 0; }
-        33% { opacity: 0; }
-        100% { opacity: 1; }
-    }
-    
-    @-o-keyframes fadeIn {
-        0% { opacity: 0; }
-        33% { opacity: 0; }
-        100% { opacity: 1; }
-    }
-    
-    @-ms-keyframes fadeIn {
-        0% { opacity: 0; }
-        33% { opacity: 0; }
-        100% { opacity: 1; }
-    }
-    #PcTitle {
-        margin-top: 10%;
-        max-width: 90%;
-        font-size: 35px;
-    }
-    .Container {
-        grid-auto-columns: 400px;
-        gap: var(--size-5);
-    }
-    .Container > div {
-        height: 350px;
-        width: 400px;
-    }
-    .PcImg {
-        max-width: auto;
-        height: 85%;
-        margin: 20px;
-    }
-    .Container > div > h3 {
-        width: 150px;
-        font-size: 25px;
-        margin-left: 0px;
-    }
-    .Container > div > p{
-        margin-left: 0px;
-        font-size: 28px;
-        width: 150px;
-    }
-    .Container > div > button {
-        margin-left: 0%;
-        margin-bottom: 10%;
-    }
-    .Container > div > button:hover {
-        background-color: #000000;
-    }
-    .Container > div {
-        margin-left: 15px;
-        margin-top: 15px;
-    }
-    #PartsTitle {
-        margin-top: 10%;
-        margin-bottom: 10%;
-        max-width: 90%;
-        font-size: 35px;
-    }
-    .Parts {
-        width: 150px;
-        background-repeat: no-repeat;
-        z-index: 1;
-        background-size: contain;
-        border-radius: 15px;
-        margin-bottom: 20px;
-        background-position: center;
-        justify-content:space-evenly;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        height: 350px;
-        padding: 10px;
-        order: 2;
-    }
-    .PartsImg {
-        height: 10px;
-        margin-inline: auto;
-    }
-    .Parts > h3 {
-        font-size: 20px;
-        margin: 0px;
-        width: 90%;
-        align-self: center;
-    }
-    .Parts > p{
-        margin: 0px;
-        margin-bottom: 10px;
-        font-size: 30px;
-    }
-    .Parts > button {
-        margin: 0px;
         height: fit-content;
         width: fit-content;
-        font-size: 20px;
-        margin-bottom: 20px;
+        font-size: 30px;
     }
-    .Parts > img {
-        width: auto;
-        height: 50px;
-        margin: 0px;
-        align-self: center;
-        margin-bottom: 15px;
-        margin-top: 20%;
-    }
-    .cart {
-        justify-content: flex-start;
-        width: auto;
+
+    .container > button {
         height: fit-content;
-        order: 1;
-        display:grid;
-        grid-auto-flow: column;
-        overscroll-behavior-inline: contain;
-        grid-auto-columns: 300px;
-        overflow-x: auto;
-        gap: var(--size-2);
-        background-image: ('src/');
-    }
-    .cart > div {
-        height: fit-content;
-        width: 250px;
-    }
-    .cart > div > h5 {
-        font-size: 25px;
-    }
-    .cart > div > h6 {
-        font-size: 25px;
-    }
-    .cart-total {
-        margin: auto;
-        right: 0px;
-        left: 15px;
-        height: auto;
-    }
-    .cart-total > div > p {
-        margin: auto;
-    }
-}
-@media screen and (max-width: 9298px) {
-    body {
-        font-size: 14px;
+        width: fit-content;
+        padding: 15px;
+        font-size: 30px;
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
 
     .header {
-        width: 100%;
         padding: 9px 4%;
-        background: #112e42; /* Adjust background color if needed */
     }
 
-    .navbar {
-        justify-content: center;
-        text-align: center;
-    }
-
-    .container {
-        margin-top: 20px;
-        margin-left: 10px;
-    }
-
-    .container > input {
-        width: 80%; /* Adjust input width */
+    .navbar a {
+        font-size: 12px;
+        margin-left: 1.5rem;
     }
 
     .headerBG {
-        height: 700px;
-        display: flex;
-        flex-wrap: wrap;
+        height: 400px;
     }
 
-    .topScroll {
-        position: relative;
-        background-image: none;
-        background-color: #00000095;
-        z-index: 1;
-        height: 200px;
-    }
-
-    #PcTitle {
-        margin-top: 10%;
-        max-width: 90%;
-        font-size: 35px;
-    }
-
-    .Container {
-        grid-auto-columns: 400px;
-        gap: var(--size-5);
-    }
-
-    .Container > div {
-        height: 350px;
-        width: 400px;
-    }
-
-    .PcImg {
-        max-width: auto;
-        height: 85%;
-        margin: 20px;
-    }
-
-    .Container > div > h3 {
-        width: 150px;
-        font-size: 25px;
-        margin-left: 0px;
-    }
-
-    .Container > div > p {
-        margin-left: 0px;
-        font-size: 28px;
-        width: 150px;
-    }
-
-    .Container > div > button {
-        margin-left: 0%;
-        margin-bottom: 10%;
-    }
-
-    .Container > div > button:hover {
-        background-color: #000000;
-    }
-
-    .Container > div {
-        margin-left: 15px;
-        margin-top: 15px;
-    }
-
-    #PartsTitle {
-        margin-top: 10%;
-        margin-bottom: 10%;
-        max-width: 90%;
-        font-size: 35px;
-    }
-
-    .Parts {
-        width: 150px;
-        background-repeat: no-repeat;
-        z-index: 1;
-        background-size: contain;
-        border-radius: 15px;
-        margin-bottom: 20px;
-        background-position: center;
-        justify-content: space-evenly;
+    .container > h1 {
+        font-size: 1.2em;
+        width: 100%;
         text-align: center;
-        display: flex;
-        flex-direction: column;
-        height: 350px;
-        padding: 10px;
-        order: 2;
     }
 
-    .PartsImg {
-        height: 10px;
-        margin-inline: auto;
-    }
-
-    .Parts > h3 {
-        font-size: 20px;
-        margin: 0px;
-        width: 90%;
-        align-self: center;
-    }
-
-    .Parts > p {
-        margin: 0px;
-        margin-bottom: 10px;
-        font-size: 30px;
-    }
-
-    .Parts > button {
-        margin: 0px;
-        height: fit-content;
-        width: fit-content;
-        font-size: 20px;
-        margin-bottom: 20px;
-    }
-
-    .Parts > img {
-        width: auto;
-        height: 50px;
-        margin: 0px;
-        align-self: center;
-        margin-bottom: 15px;
-        margin-top: 20%;
-    }
-
-    .cart {
-        justify-content: flex-start;
-        width: auto;
-        height: fit-content;
-        order: 1;
-        display: grid;
-        grid-auto-flow: column;
-        overscroll-behavior-inline: contain;
-        overflow-x: auto;
-    }
-
-    .cart > button {
-        font-size: 20px;
-        margin-bottom: 15px;
-        margin-right: 10px;
-    }
-
-    .cart > button:hover {
-        background-color: #000000;
-    }
-
-    .cartImg {
-        height: 60px;
+    .container > p {
+        font-size: 16px;
+        width: 100%;
+        text-align: center;
     }
 }
 
+/* Responsive styles for screens up to 1298px */
+@media screen and (max-width: 1298px) {
+    .header {
+        padding: 9px 2%;
+    }
+
+    .pcshop {
+
+
+    }
+    .navbar a {
+        font-size: 14px;
+        margin-left: 1rem;
+    }
+
+    .container > h1 {
+        font-size: 2em;
+        width: 100%;
+        text-align: center;
+    }
+
+    .container > p {
+        font-size: 18px;
+        width: 100%;
+        text-align: center;
+    }
+
+    .headerBG {
+        height: 500px;
+    }
+
+    .container > button {
+        font-size: 36px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .container > input {
+        width: 90%;
+        font-size: 20px;
+    }
+
+    .container > h5 {
+        font-size: 22px;
+        width: 90%;
+        text-align: center;
+    }
+
+    .quicklogBottom > a {
+        font-size: 22px;
+    }
+}
