--- a/Shoppingcart/src/assets/storestyles.css
+++ b/Shoppingcart/src/assets/storestyles.css
@@ -1012,4 +1012,14 @@ label {
     .quicklogBottom > a {
         font-size: 22px;
     }
+    
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+}
+
+    .container > * {
+        flex: 1;
+        margin: 10px;
+}
 }
