--- a/styles.css
+++ b/styles.css
@@ -201,3 +201,24 @@ p{
 
 
 }
+
+/* barrel jump page */
+
+.barrel{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 80px;
+    color: #00abf0;
+    margin-top: 160px;
+}
+.game{
+    margin-top: 50px;
+    margin-left: -300px;
+    font-size: 25px;
+    color:var(--text-color);
+
+}
+iframe{
+    height: 1100px;
+    margin-top: -120px;
+
+}
