--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -33,7 +33,7 @@ body {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: transparent;
+    background: var(--bg-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,13 +43,13 @@ body {
 
 .logo {
     font-size: 2.5rem;
-    color: var(--text-color);
+    color: var(--main-color);
     font-weight: 600;
-
+    
 }
 
 .navbar a {
-    font-size: 1.7rem;
+    font-size: 3rem;
     color: var(--text-color);
     font-weight: 500;
     margin-left: 3.5rem;
@@ -205,20 +205,57 @@ p{
 /* barrel jump page */
 
 .barrel{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans';
     font-size: 80px;
     color: #00abf0;
-    margin-top: 160px;
+    margin-top: 290px;
+    margin-left: 750px;
 }
 .game{
     margin-top: 50px;
-    margin-left: -300px;
+    margin-left: -175px;
     font-size: 25px;
     color:var(--text-color);
-
 }
 iframe{
-    height: 1100px;
-    margin-top: -120px;
+    height: 700px;
+    margin-left: 200px;
+    margin-top: -150px;
+    color: #050505;
+}
+.adventure_title{
+    font-family: 'Open Sans';
+    font-size: 80px;
+    color: #00abf0;
+    margin-top: 160px;
+    margin-left: 650px;
+}
+.adventure{
+    margin-top: -150px;
 
+}
+.RPS{
+    font-family: 'Open Sans';
+    font-size: 80px;
+    color: #00abf0;
+    margin-top: 160px;
+    margin-left: 640px;
+}
+.RPS_screen{
+    margin-top: -150px;
+
+}
+.swordline {
+    margin-top: 25px;
+    height: 15px;
+    background-image: linear-gradient(
+        to right,
+        transparent 10%,
+        rgb(0,171,240) 50%,
+        transparent 90%
+    );
+    background-repeat: no-repeat;
+    background-size: 100% 100px;
+    background-position: 0 center;
+    z-index: 100;
 }
