--- a/tradingcards/styles.css
+++ b/tradingcards/styles.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=MedievalSharp&display=swap');
 
 body{background-image: url("https://wallpaper.dog/large/20493136.jpg");}
 
@@ -45,15 +45,13 @@ body {
   transition: .3s;
 }
 
-.logo {
-  font-size: 2.5rem;
-  color: var(--main-color);
-  font-weight: 600;
-  font-family: 'Poppins',sans-serif;
+.logos img{
+  height: 7rem;
+  margin-bottom: -159px;
 }
 
 .navbar a {
-  margin-top: 120px;
+  margin-top: 100px;
   font-size: 1.7rem;
   color: var(--text-color);
   font-weight: 500;
@@ -63,12 +61,12 @@ body {
 
 }
 h6 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'MedievalSharp', cursive;
   color: var(--main-color);
   padding-left: 1px;
   font-size: 4rem;
   margin-top: 100px;
-  margin-left: 300px;
+  margin-left: 500px;
 
 }
 .btn-box {
@@ -77,6 +75,7 @@ h6 {
   justify-content: space-between;
   width: 3.5rem;
   height: 5rem;
+
 }
 .btn-box .btn {
   position: relative;
@@ -115,6 +114,7 @@ h6 {
   position: relative;
   bottom: 2rem;
   width: 1270px;
+  
   display: flex;
   justify-content: space-between;
 }
@@ -125,10 +125,10 @@ h6 {
   justify-content: center;
   align-items: center;
   width: 150px;
-    height: 50px;
-    background: transparent;
-    border: .2rem solid var(--main-color);
-    border-radius: 20%;
+  height: 50px;
+  background: transparent;
+  border: .2rem solid var(--main-color);
+  border-radius: 20%;
   font-size: 20px;
   color: var(--main-color);
   z-index: 1;
@@ -145,6 +145,7 @@ h6 {
   left: 0;
   width: 0;
   height: 100%;
+
   background: var(--main-color);
   z-index: -1;
   transition: .5s;
@@ -163,6 +164,7 @@ h6 {
 }
 
 #menu-icon {
+
   font-size: 3.6rem;
   color: var(--text-color);
   cursor: pointer;
